updated gitignore with virtualenv dir; added a requirements file for use with pyenv + pip

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ outputs/
 # checkpoint files
 *.ckpt
 
+# virtualenv dir
+venv/
+
 # ----------------------------------------
 
 # Byte-compiled / optimized / DLL files
