--- a/InST/environment.yaml
+++ b/InST/environment.yaml
@@ -9,6 +9,7 @@ dependencies:
   - pytorch=1.10.2
   - torchvision=0.11.3
   - numpy=1.22.3
+  - ipython
   - pip:
     - albumentations==1.1.0
     - opencv-python==4.2.0.34
